# jitter

./: Cargo.toml  README.md
doc/: CompileFunction.excalidraw  Grammar.md  Jitter-Presentation.pptx  Lifetimes.excalidraw  function.c  function.s
examples/: factorial.ji
src/: asm.rs  asm_generator.rs  ir.rs  jit.rs  lexer.rs  main.rs  memory.rs  parser.rs  predefined_functions.rs  semantic.rs  ssa.rs
src/asm/: lifetime.rs  var_allocator.rs
test/: read_number.ji  test1.ji  test2.ji  test3.ji  test4.ji  test5.ji  test6.ji  test7.ji  test8.ji
