[package]
name = "jitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
libc = "0.2.144"
winapi = { version = "0.3.9", features = ["memoryapi", "sysinfoapi", "errhandlingapi"] }
iced-x86 = { version ="1.21.0", features = ["code_asm"] }
itertools = "0.12.1"
bimap = "0.6.3"
